| Bug #2772 | Function with character set clause fails in stored procedures | ||
|---|---|---|---|
| Submitted: | 13 Feb 2004 6:27 | Modified: | 6 Apr 2004 4:33 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.0-alpha-debug | OS: | Linux (SuSE 8.2/Win XP) |
| Assigned to: | Bugs System | Target Version: | |
[13 Feb 2004 6:27]
Peter Gulutzan
[20 Feb 2004 13:45]
Miguel Solorzano
The same for Windows version.
[6 Apr 2004 4:33]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
