Fixed BUG#2772: Function with character set clause fails in stored procedures. Complex return types were not stored correctly in the mysql.proc table.